Fix stuck scrolling on Safari

--- a/frontend/playlist-frontend/src/styles/_constants.scss
+++ b/frontend/playlist-frontend/src/styles/_constants.scss
@@ -5,6 +5,3 @@ $medium-breakpoint-width: 900px;
 $large-breakpoint-width: 960px;
 $xlarge-breakpoint-width: 1280px;
 $xxl-breakpoint-width: 1870px;
-
-// to align content with title
-$content-padding-side: 70px;
